# Proyecto2Lenguajes

./: .gitignore  Main.hs  Proyecto2Lenguajes.cabal  servicios.txt  usuarios.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
